# specky.one

./: .gitignore  Cargo.toml  IDEAS.md  README.md  index.js  package-lock.json  package.json
handlers/: database.js
middleware/: devMode.js  discordAuth.js
public/: spwn.css  spwn.js
public/blog/: blog.css
public/css/: main.css
public/dictionary/: dictionary1.json
public/lonely/: lonely_place.json
routes/: admin.js  anmt.js  api.js  auth.js  blog.js  dev.js  discord.js  gallery.coffee  github.js  login.coffee  lonely.js  media.js  movie.js  preview.js  radio.js  spwn_ideas.js  static.js  summertime.coffee  test.coffee  us.js
routes/admin/: api.coffee
routes/api/: api.coffee  ip.coffee  proxy.js
routes/api/account/: admin.coffee  authorized.coffee  user.coffee
routes/gallery/: art.coffee
routes/movie/: movies.coffee
src/: catchers.rs  main.rs  util.rs
src/routes/: auth_discord.rs  index.rs  media.rs  mod.rs
util/: global.js  log.js  path.js
views/: 404.pug  api.pug  dev.pug  error.pug  index.pug  login.pug
views/admin/: login.pug  main.pug
views/blog/: main.pug  mancala.pug  project140225.pug  spwn.pug  todind.pug
views/games/: bleak.pug  lonely.pug  sugo.pug
views/includes/: embed.pug  footer.pug  konami.pug  meta.pug  popup.pug  ribbon.pug  style.pug
views/memes/: summertime.pug
views/movie/: main.pug
views/other/: anmt.pug  blck.pug  dictionary.pug  gallery.pug  media.pug  ngon_generator.html  radio.pug  spwn_ideas.pug  us.pug  visort.pug  waifus.pug
views/test/: error.pug  popup.pug
views/utils/: case_converter.pug
(+19 files in other folders)
